2010-09-10  yi shen  <yi.4.shen@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] selected text gets deleted when qgraphicswebview losts focus
        https://bugs.webkit.org/show_bug.cgi?id=45539

        * Api/qwebpage.cpp:
        (QWebPagePrivate::inputMethodEvent):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

Canonical link: https://commits.webkit.org/58021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67289 268f45cc-cd09-0410-ab3c-d52691b4dbfc